core/view/frontend/web/css/source/_module.less
/**
 * Copyright © Refactored Group (https://www.refactored.group)
 * @copyright Copyright © 2022. All rights reserved.
 */

.flex-container-results {
    justify-content: flex-start;
    height: 100%;
}
.ffl-heading {
    flex: 0 1 30%;
    max-height: 100%;
    h1 {
        text-transform: uppercase;
    }
}
.ffl-results {
    flex: 0 1 30%;
    max-height: 100%;
    overflow-y: auto;
}
.ffl-map {
    flex: 0 1 70%;
    background: #f2a825;
}
.ffl-search-field {
    flex: 0 1 40%;
}
.ffl-miles {
    flex: 0 1 10%;
}
.ffl-search {
    flex: 0 1 10%;
}
.ffl-placeholder {
    flex: 0.02;
}
.ffl-cancel {
    flex: 0 1 10%;
}
.dealers-modal-button {
    width: 100%;
    padding: 20px 40px !important;
}
.ffl-flex-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
}
.modal-slide {
    .modal-header {
        padding-right: 0px !important;
        padding-bottom: 0px !important;
    }
    .modal-content {
        padding-right: 0px !important;
        padding-bottom: 0px !important;
    }
    .modal-footer {
        padding-right: 0px !important;
        padding-bottom: 0px !important;
    }
}
.modal-content {
    height: 100%;
}
.ffl-search-input {
    width: 99% !important;
    padding: 28px 40px !important;
    font-size: 20px !important;
    border-top: 0px !important;
    border-right: 0px !important;
    border-left: 0px !important;
    margin-right: 3px !important;
}
.action-close {
    display: none !important;
}
.select-ffl {
    color: #333333;
    display: inline-block;
    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-weight: 600;
    font-size: 1.4rem;
    line-height: 1.6rem;
    vertical-align: middle;
    height: 58px;
}
@media screen and (max-width: 800px) {
    #ffl-input-search {
        text-align: center !important;
        font-size: 30px !important;
        padding: 0 0 5px!important;
        font-weight: bold;
    }
    #ffl-input-search::placeholder {
        text-align: center !important;
        font-size: 16px;
        padding: 0 !important;
        font-weight: normal;
    }
    .ffl-dealer-preferred, .ffl-dealer {
        margin-right: 0px !important;
    }
    .ffl-flex-container {
        padding-right: 25px;
        flex-wrap: wrap;
    }
    .ffl-heading {
        flex: 0 1 100%;
        text-align: center;
    }
    .ffl-search-field {
        flex: 0 1 100%;
        padding-bottom: 10px;
    }
    .ffl-miles {
        flex: 0 1 100%;
        padding-bottom: 10px;
    }
    .ffl-search {
        flex: 0 1 50%;
        padding-left: 0px;
        padding-bottom: 10px;
    }
    .ffl-cancel {
        flex: 0 1 50%;
        padding-left: 0px;
        padding-bottom: 10px;
    }
    .ffl-results {
        flex: 0 1 100%;
        padding-top: 20px;
    }
    .ffl-map {
        flex: 0 1 100%;
    }
    .flex-container-results {
        flex-direction: column-reverse !important;
        flex-wrap: nowrap !important;
    }
}
.ffl-dealer {
    display: block;
    position: relative;
    padding: 20px;
    border: 3px solid #eeeeee;
    margin-bottom: 20px;
    background: #f9f9f9;
    margin-right: 20px;
    cursor: pointer;
    &:hover {
        border: 3px solid #ff5501 !important;
        background: #ffffff !important;
    }
}

.ffl-dealer-preferred {
    display: block;
    margin-right: 20px;
    cursor: pointer;
    position: relative;
    padding: 20px;
    margin-bottom: 20px;
    border: 3px solid #1a79c2 !important;
    background: #fff !important;
    &:after {
        background: #1a79c2;
        color: #fff;
        content: '\e605';
        font-family: 'luma-icons';
        height: 27px;
        width: 29px;
        font-size: 19px;
        line-height: 21px;
        padding-top: 2px;
        position: absolute;
        right: 0;
        text-align: center;
        top: 0;
    }
    &:hover {
        border: 3px solid #ff5501 !important;
        background: #ffffff !important;
        &:after {
            background: #ff5501 !important;
        }
    }
}

.ffl-dealer-name {
    font-weight: bold;
}

.ffl-cart-input-address {
    width: 0px !important;
    height: 0px !important;
    padding:0px !important;
    margin: 0px !important;
}

.message.ffl {
    margin: 0 0 10px;
    padding: 12px 20px 12px 25px;
    display: block;
    font-size: 1.3rem;
    background: #fdf0d5;
    color: #6f4400;
    padding-right: 25px;
    position: relative;
    border: 1px solid #eac675;
}
.message.ffl div {
    padding-right: 20px;
}
.message.ffl .close-button {
    float: right;
    position: absolute;
    right: 0;
}
.message.ffl .close-button:after {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-size: 12px;
    line-height: 24px;
    color: #a7a4a1;
    content: '\e616';
    font-family: 'luma-icons';
    margin: -12px 0 0;
    vertical-align: middle;
    display: inline-block;
    font-weight: normal;
    overflow: hidden;
    speak: none;
    right: 0;
    top: 8px;
    width: 45px;
    position: absolute;
    text-align: center;
}
.ffl-toast-container {
    width: 96%;
    padding-right: 2%;
    padding-top: 10px;
}

